# engram

./: .env.example  .gitignore  README.md  pyproject.toml
src/engram/: __init__.py  config.py
src/engram/cli/: main.py
src/engram/digest/: __init__.py  bootstrap.py
src/engram/hooks/: __init__.py  handlers.py
src/engram/ingest/: __init__.py  drain.py  edges.py  extractor.py  redact.py  supersede.py  tools.py  transcript.py
src/engram/mcp/: __init__.py  server.py
src/engram/retrieval/: __init__.py  embeddings.py  graph.py  search.py
src/engram/storage/: __init__.py  db.py  models.py  queue.py
templates/: claude-settings.json  mcp.json
tests/: conftest.py  test_bootstrap_budget.py  test_drain.py  test_edges.py  test_embeddings.py  test_extractor.py  test_feedback_loop.py  test_graph.py  test_hybrid_search.py  test_queue.py  test_redact.py  test_storage.py  test_supersede.py  test_transcript.py
